@@ -1,4 +1,9 @@
 2012-01-10  Vanessa Gil  <vanessa.gil@artica.es>
+	* operation/agentes/group_view.php
+	  include/functions_group.php: Improve display for 
+	group view.
+
+2012-01-10  Vanessa Gil  <vanessa.gil@artica.es>
 	* godmode/agentes/planned_downtime.php: fixed error in
 	planned downtime.
 
